[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apiverve-mcp"
version = "1.0.1"
description = "APIVerve MCP Server - Access 249+ APIs through the Model Context Protocol"
readme = "README.md"
authors = [{name = "APIVerve", email = "hello@apiverve.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["mcp", "mcp-server", "model-context-protocol", "apiverve", "api", "claude", "chatgpt", "ai", "llm"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://apiverve.com"
Documentation = "https://docs.apiverve.com"
Repository = "https://github.com/apiverve/mcp-server"
Issues = "https://github.com/apiverve/mcp-server/issues"

[project.scripts]
apiverve-mcp = "apiverve_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
